force-app/main/default/objects/Training_Program_Feedback__c/fields/X5_Delivered_del__c.field-meta.xml
<CustomField>
    <fullName>X5_Delivered_del__c</fullName>
    <label>5-Delivered</label>
    <length>5</length>
    <type>Text</type>
</CustomField>