force-app/main/default/objects/Training_Program_Feedback__c/recordTypes/ADKAR_Model_Mastery_Level_1_2.recordType-meta.xml
<RecordType>
    <fullName>ADKAR_Model_Mastery_Level_1_2</fullName>
    <active>true</active>
    <label>ADKAR Model Mastery Level 1 &amp; 2</label>
</RecordType>