force-app/main/default/objects/Training_Program_Feedback__c/recordTypes/Advisory_Feedback.recordType-meta.xml
<RecordType>
    <fullName>Advisory_Feedback</fullName>
    <active>true</active>
    <label>Advisory Feedback</label>
</RecordType>