force-app/main/default/objects/Training_Program_Feedback__c/recordTypes/Delivering_Project_Results_DPR.recordType-meta.xml
<RecordType>
    <fullName>Delivering_Project_Results_DPR</fullName>
    <active>true</active>
    <label>Delivering Project Results (DPR)</label>
</RecordType>