force-app/main/default/objects/Training_Program_Feedback__c/recordTypes/Electronic_Feedback_Improve_Project_Health.recordType-meta.xml
<RecordType>
    <fullName>Electronic_Feedback_Improve_Project_Health</fullName>
    <active>true</active>
    <label>Electronic Feedback Improve Project Health</label>
</RecordType>