force-app/main/default/objects/Training_Program_Feedback__c/recordTypes/Electronic_Feedback_Practitioner_2021.recordType-meta.xml
<RecordType>
    <fullName>Electronic_Feedback_Practitioner_2021</fullName>
    <active>true</active>
    <label>Electronic Feedback Practitioner 2021</label>
</RecordType>