force-app/main/default/objects/Training_Program_Feedback__c/recordTypes/Electronic_Feedback_v_18.recordType-meta.xml
<RecordType>
    <fullName>Electronic_Feedback_v_18</fullName>
    <active>true</active>
    <description>Electronic feedback started in 2018</description>
    <label>Electronic Feedback v 18</label>
</RecordType>