force-app/main/default/objects/Training_Program_Feedback__c/recordTypes/Employee_Orientation.recordType-meta.xml
<RecordType>
    <fullName>Employee_Orientation</fullName>
    <active>true</active>
    <label>Employee Orientation</label>
</RecordType>