force-app/main/default/objects/Training_Program_Feedback__c/recordTypes/Experienced_Practitioner.recordType-meta.xml
<RecordType>
    <fullName>Experienced_Practitioner</fullName>
    <active>true</active>
    <label>Experienced Practitioner</label>
</RecordType>