force-app/main/default/objects/Training_Program_Feedback__c/recordTypes/Fundamentals_of_Change_Workshop.recordType-meta.xml
<RecordType>
    <fullName>Fundamentals_of_Change_Workshop</fullName>
    <active>true</active>
    <label>Fundamentals of Change Workshop</label>
</RecordType>