force-app/main/default/objects/Training_Program_Feedback__c/recordTypes/Manager.recordType-meta.xml
<RecordType>
    <fullName>Manager</fullName>
    <active>true</active>
    <label>Manager</label>
</RecordType>