force-app/main/default/objects/Training_Program_Feedback__c/recordTypes/Post_Certification_Surveys.recordType-meta.xml
<RecordType>
    <fullName>Post_Certification_Surveys</fullName>
    <active>true</active>
    <label>Post Certification Surveys</label>
</RecordType>