force-app/main/default/objects/Training_Program_Feedback__c/recordTypes/TTT.recordType-meta.xml
<RecordType>
    <fullName>TTT</fullName>
    <active>true</active>
    <label>TTT</label>
</RecordType>