force-app/main/default/objects/Training_Program_Feedback__c/listViews/Advisory_Feedback.listView-meta.xml
<ListView>
    <fullName>Advisory_Feedback</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Training_Event__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Training_Program_Feedback__c.Advisory_Feedback</value>
    </filters>
    <label>Advisory Feedback</label>
</ListView>